changed SciELOpds to SciELOopds (also, all lowercase occurrences)

--- a/SciELOopds/setup.cfg
+++ b/SciELOopds/setup.cfg
@@ -1,27 +1,27 @@
 [nosetests]
 match = ^test
 nocapture = 1
-cover-package = scielopds
+cover-package = scieloopds
 with-coverage = 1
 cover-erase = 1
 
 [compile_catalog]
-directory = scielopds/locale
-domain = SciELOpds
+directory = scieloopds/locale
+domain = SciELOopds
 statistics = true
 
 [extract_messages]
 add_comments = TRANSLATORS:
-output_file = scielopds/locale/SciELOpds.pot
+output_file = scieloopds/locale/SciELOopds.pot
 width = 80
 
 [init_catalog]
-domain = SciELOpds
-input_file = scielopds/locale/SciELOpds.pot
-output_dir = scielopds/locale
+domain = SciELOopds
+input_file = scieloopds/locale/SciELOopds.pot
+output_dir = scieloopds/locale
 
 [update_catalog]
-domain = SciELOpds
-input_file = scielopds/locale/SciELOpds.pot
-output_dir = scielopds/locale
+domain = SciELOopds
+input_file = scieloopds/locale/SciELOopds.pot
+output_dir = scieloopds/locale
 previous = true
