--- a/SciELOopds/development.ini
+++ b/SciELOopds/development.ini
@@ -1,5 +1,5 @@
 [app:main]
-use = egg:SciELOpds
+use = egg:SciELOopds
 
 pyramid.reload_templates = true
 pyramid.debug_authorization = false
@@ -17,7 +17,7 @@ port = 6543
 # Begin logging configuration
 
 [loggers]
-keys = root, scielopds
+keys = root, scieloopds
 
 [handlers]
 keys = console
@@ -29,10 +29,10 @@ keys = generic
 level = INFO
 handlers = console
 
-[logger_scielopds]
+[logger_scieloopds]
 level = DEBUG
 handlers =
-qualname = scielopds
+qualname = scieloopds
 
 [handler_console]
 class = StreamHandler
