--- a/SciELOopds/production.ini
+++ b/SciELOopds/production.ini
@@ -1,5 +1,5 @@
 [app:main]
-use = egg:SciELOpds
+use = egg:SciELOopds
 
 pyramid.reload_templates = false
 pyramid.debug_authorization = false
@@ -16,7 +16,7 @@ port = 6543
 # Begin logging configuration
 
 [loggers]
-keys = root, scielopds
+keys = root, scieloopds
 
 [handlers]
 keys = console
@@ -28,10 +28,10 @@ keys = generic
 level = WARN
 handlers = console
 
-[logger_scielopds]
+[logger_scieloopds]
 level = WARN
 handlers =
-qualname = scielopds
+qualname = scieloopds
 
 [handler_console]
 class = StreamHandler
