ENT07 Manage mongoDB connection with pyramid event subscriber

--- a/development.ini
+++ b/development.ini
@@ -6,8 +6,9 @@ pyramid.debug_authorization = false
 pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
-pyramid.includes = 
+pyramid.includes =
     pyramid_debugtoolbar
+mongo_uri = mongodb://localhost:27017/scieloopds
 
 [server:main]
 use = egg:waitress#main
