--- a/production.ini
+++ b/production.ini
@@ -6,6 +6,7 @@ pyramid.debug_authorization = false
 pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
+mongo_uri = mongodb://localhost:27017/scieloopds
 
 [server:main]
 use = egg:waitress#main
