ENT07 Change structure to perform filters on mongoDB backend

--- a/development.ini
+++ b/development.ini
@@ -9,6 +9,7 @@ pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_debugtoolbar
 mongo_uri = mongodb://localhost:27017/scieloopds
+scielo_uri = http://books.scielo.org/api/v1/
 
 [server:main]
 use = egg:waitress#main
