--- a/production.ini
+++ b/production.ini
@@ -7,6 +7,7 @@ pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 mongo_uri = mongodb://localhost:27017/scieloopds
+scielo_uri = http://books.scielo.org/api/v1/
 
 [server:main]
 use = egg:waitress#main
