--- a/development.ini
+++ b/development.ini
@@ -10,6 +10,9 @@ pyramid.includes =
     pyramid_debugtoolbar
 mongo_uri = mongodb://localhost:27017/scieloopds
 scielo_uri = http://books.scielo.org/api/v1/
+auto_sync = True
+auto_sync_interval = 60
+auto_sync_cmd = python -m scieloopds.sync -f development.ini
 
 [server:main]
 use = egg:waitress#main
