--- a/development.ini
+++ b/development.ini
@@ -13,6 +13,7 @@ scielo_uri = http://books.scielo.org/api/v1/
 auto_sync = True
 auto_sync_interval = 60
 auto_sync_cmd = python -m scieloopds.sync -f development.ini
+items_per_page = 20
 
 [server:main]
 use = egg:waitress#main
