--- a/production.ini
+++ b/production.ini
@@ -10,7 +10,8 @@ mongo_uri = mongodb://localhost:27017/scieloopds
 scielo_uri = http://books.scielo.org/api/v1/
 auto_sync = True
 auto_sync_interval = 3600
-auto_sync_cmd = python -m scieloopds.sync -f development.ini
+auto_sync_cmd = python -m scieloopds.sync -f production.ini
+items_per_page = 20
 
 [server:main]
 use = egg:waitress#main
