Ajustes para a construção de imagem docker.
A aplicação passa a poder ser configurada por meio de variáveis de
ambiente e o mecanismo de atualização deixa de ser executado por meio do
uso de objetos ``subprocess.Popen``.

--- a/production.ini
+++ b/production.ini
@@ -6,6 +6,7 @@ pyramid.debug_authorization = false
 pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
+
 mongo_uri = mongodb://localhost:27017/scieloopds
 scielo_uri = http://books.scielo.org/api/v1/
 auto_sync = True
@@ -13,10 +14,19 @@ auto_sync_interval = 3600
 auto_sync_cmd = python -m scieloopds.sync -f production.ini
 items_per_page = 20
 
+###
+# wsgi server configuration
+###
+
 [server:main]
-use = egg:waitress#main
+use = egg:gunicorn#main
 host = 0.0.0.0
 port = 6543
+workers = 2
+threads = 2
+preload = true
+reload = true
+loglevel = info
 
 # Begin logging configuration
 
@@ -30,7 +40,7 @@ keys = console
 keys = generic
 
 [logger_root]
-level = WARN
+level = ERROR
 handlers = console
 
 [logger_scieloopds]
