--- a/production.ini
+++ b/production.ini
@@ -11,7 +11,6 @@ mongo_uri = mongodb://localhost:27017/scieloopds
 scielo_uri = http://books.scielo.org/api/v1/
 auto_sync = True
 auto_sync_interval = 3600
-auto_sync_cmd = python -m scieloopds.sync -f production.ini
 items_per_page = 20
 
 ###
@@ -31,7 +30,7 @@ loglevel = info
 # Begin logging configuration
 
 [loggers]
-keys = root, scieloopds
+keys = root, scieloopds, sync
 
 [handlers]
 keys = console
@@ -44,9 +43,13 @@ level = ERROR
 handlers = console
 
 [logger_scieloopds]
-level = WARN
-handlers =
+level = INFO
+handlers = console
 qualname = scieloopds
+
+[logger_sync]
+level = INFO
+handlers = console
 
 [handler_console]
 class = StreamHandler
